Parallax - fix view port visibility, change stellar option from bg-pos to transform.

--- a/src/sass/components/_section-4.sass
+++ b/src/sass/components/_section-4.sass
@@ -94,7 +94,6 @@
 
 
   .section__img
-    display: block !important
     position: absolute
     bottom: 100px
     left: 0
